tests/snapshots/examples_fixtures/type_classes__superclass_evidence_without_context.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/superclass_evidence_without_context.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
