tests/snapshots/examples_fixtures/type_classes__superclass_instance_validation.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/superclass_instance_validation.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
