tests/snapshots/examples_fixtures/type_classes__superclass_method_call.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/superclass_method_call.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
