tests/snapshots/examples_fixtures/type_classes__superclass_order_independent.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/superclass_order_independent.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
