tests/snapshots/examples_fixtures/type_classes__superclass_slot_dictionary.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/superclass_slot_dictionary.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
