tests/snapshots/examples_fixtures/type_classes__syntax_tour.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/syntax_tour.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
