tests/snapshots/examples_fixtures/type_classes__toplevel_constrained_call.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/toplevel_constrained_call.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
