tests/snapshots/examples_fixtures/type_classes__transitive_superclass.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/transitive_superclass.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
