tests/snapshots/examples_fixtures/type_classes__two_dictionaries_one_class.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/two_dictionaries_one_class.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
