tests/snapshots/examples_fixtures/type_classes__two_dictionaries_superclass.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/two_dictionaries_superclass.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
