tests/snapshots/examples_fixtures/type_classes__typeclass_backend_parity.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/typeclass_backend_parity.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
