tests/snapshots/examples_fixtures/type_classes__unsupported_deriving_diagnostic.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
assertion_line: 39
---
Fixture: examples/type_classes/unsupported_deriving_diagnostic.flx
== compile ==
failed (compile)
== diagnostics ==
error[E486]: Underivable Class

`Functor` cannot be derived for `Box`: no usable `fmap` can be generated for it.

  examples/type_classes/unsupported_deriving_diagnostic.flx:17:1
   |
17 | data Box<a> { Box(a) } deriving (Functor)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
== stdout ==
<not executed>
